Bug 580544 - Don't bother trying to use the global object as a constructor. r=jorendorff